Major changes in the chapter about CNNs

--- a/main.tex
+++ b/main.tex
@@ -13,6 +13,7 @@
 \usepackage{multicol}
 \usepackage{relsize}
 \usepackage{mathtools}
+\usepackage[font={small}]{caption}
 \DeclarePairedDelimiter\ceil{\lceil}{\rceil}
 \DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
 
@@ -59,7 +60,7 @@
 %\end{abstract}
 %\include{Chapters/Introduction}
 %\include{Chapters/Dual-Phase-Steel}
-%\include{Chapters/Datasets}
+\include{Chapters/Datasets}
 %\include{Chapters/Chapter1}
 %%%\include{Chapters/CNN}
 \include{Chapters/CNN_neu}
