--- a/main.tex
+++ b/main.tex
@@ -71,7 +71,7 @@
 %\end{abstract}
 %\include{Chapters/Introduction}
 %\include{Chapters/Dual-Phase-Steel}
-%\include{Chapters/CNN_neu}
+\include{Chapters/CNN_neu}
 %\include{Chapters/PreliminaryStudies}
 \include{Chapters/Datasets}
 %\include{Chapters/Architecture}
