Performance chapter was filled. Architecture chapter was revisited

--- a/main.tex
+++ b/main.tex
@@ -71,10 +71,10 @@
 %\end{abstract}
 %\include{Chapters/Introduction}
 %\include{Chapters/Dual-Phase-Steel}
-\include{Chapters/CNN_neu}
+%\include{Chapters/CNN_neu}
 %\include{Chapters/PreliminaryStudies}
-\include{Chapters/Datasets}
-%\include{Chapters/Architecture}
+%\include{Chapters/Datasets}
+\include{Chapters/Architecture}
 %\include{Chapters/Performance}
 %\include{Chapters/Workflow}
 %\include{Chapters/Conclusion}
