--- a/main.tex
+++ b/main.tex
@@ -74,10 +74,11 @@
 %\include{Chapters/CNN_neu}
 %\include{Chapters/PreliminaryStudies}
 %\include{Chapters/Datasets}
-\include{Chapters/Architecture}
-%\include{Chapters/Performance}
+%\include{Chapters/Architecture}
+\include{Chapters/Performance}
 %\include{Chapters/Workflow}
 %\include{Chapters/Conclusion}
+%\include{Chapters/Outlook}
 %\appendix
 %\include{Chapters/Appendix}
 
