Preliminary version of Performance done

--- a/main.tex
+++ b/main.tex
@@ -69,14 +69,14 @@
 %
 %%Different kinds of damages can emerge in dual phase steel under uniaxial and biaxial tension. Gathering statisticly meaningful data is an important means for understanding its mechanical properties. The process of collecting data to this point is performed either manually or partly assisted by computational means. In this thesis we ask whether it is possible to automatize this process of locating and categorizating damages by means of artificial neural networks. Solving this problem we face to problems. On the one hand a low volume of training data compared to classical categorization problems. Secondly damages are objects mostly defined by their surroundings rather than by their own properties.
 %\end{abstract}
-\include{Chapters/Introduction}
-\include{Chapters/Dual-Phase-Steel}
-\include{Chapters/CNN_neu}
-%\include{Chapters/PreliminaryStudies}
+%\include{Chapters/Introduction}
+%\include{Chapters/Dual-Phase-Steel}
+%\include{Chapters/CNN_neu}
+%%%\include{Chapters/PreliminaryStudies}
 \include{Chapters/Datasets}
-%\include{Chapters/Architecture}
+\include{Chapters/PracticalConsiderations}
 \include{Chapters/Performance}
-%\include{Chapters/Workflow}
+%%\include{Chapters/Workflow}
 \include{Chapters/Conclusion}
 \include{Chapters/Outlook}
 %\appendix
