--- a/main.tex
+++ b/main.tex
@@ -72,13 +72,13 @@
 %\include{Chapters/Introduction}
 %\include{Chapters/Dual-Phase-Steel}
 %\include{Chapters/CNN_neu}
-%%%\include{Chapters/PreliminaryStudies}
+%%%%\include{Chapters/PreliminaryStudies}
 \include{Chapters/Datasets}
-\include{Chapters/PracticalConsiderations}
-\include{Chapters/Performance}
-%%\include{Chapters/Workflow}
-\include{Chapters/Conclusion}
-\include{Chapters/Outlook}
+%\include{Chapters/PracticalConsiderations}
+%\include{Chapters/Performance}
+%%%\include{Chapters/Workflow}
+%\include{Chapters/Conclusion}
+%\include{Chapters/Outlook}
 %\appendix
 %\include{Chapters/Appendix}
 
